# combine-equations.py

./: .gitignore  CONSOLE_VS_GUI.md  CONTEXT_MENU_IMPLEMENTATION.md  EQUATION_GUI_README.md  FEATURE_ELIMINATE_USING.md  GUI_ARCHITECTURE.md  GUI_DOCUMENTATION_INDEX.md  GUI_QUICK_REFERENCE.md  GUI_SUMMARY.md  GUI_TROUBLESHOOTING.md  NEWS.md  README.md  Untitled.ipynb  demo_equation_gui.py  demo_gui_features.py  eq-gui-README.md  notes.txt  pyproject.toml  test-case.py  test_context_menu.py
examples/: up-example-2.4-v3-001-step-by-step.py  up-example-2.5-v3-002-concise.py  up-example-2.5-v4-000-ks.py  up-example-2.6-v1-000.py  up-example-2.6-v2-000.ks.py  up-example-2.7-v1-000.py  up-example-3.10-v1-000.py  up-example-3.10-v1-001.py  up-example-3.6-v1-000.py  up-example-3.7-v1-000.py  up-example-3.9-v1-000.py  up-example-3.9-v2.py
examples/eq-gui/: JUPYTER_GUI_README.md  demo_equation_gui.py  demo_equation_gui_jupyter.ipynb  demo_gui_features.py
examples/up/ch2/: up-example-2.4-v4-000-ks.py  up-example-2.4-v4-001-ks-display-solution.py  up-example-2.5-v4-002-ks-eq-flat.py
examples/up/ch3/: up-example-3.6-v1-000.py  up-example-3.8-v1-000.py  up-example-3.9-v1-000.py  up-example-3.9-v2.py
examples/up/ch4/: up-example-4.1-v1-000.py  (+10 more)
src/combine_equations/: __init__.py  display_equations.py  eliminate_variable_subst.py  equation_gui.py  equation_gui_jupyter.py  kinematics_states.py  misc.py  newtons_laws.py  solve_and_display.py  solve_for_target.py  solve_system.py
tests/: test_up_example_3_6.py  test_up_example_3_7.py  test_up_example_3_9_v2.py
(+24 files in other folders)
