[project]
name = "combine-equations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dharmatech", email = "wayo.cavazos@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
combine-equations = "combine_equations:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
